--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,9 @@ header ul.is-sticky li a:active{
 #properties-slider img{
   width: 100%;
   display: block;
+  height: 250px;
+  object-fit: cover;
+  object-position: top;
 }
 
 #properties-slider .property-details{
@@ -317,6 +320,7 @@ header ul.is-sticky li a:active{
   display: block;
   margin: 2rem auto 0;
   width: 360px;
+  padding: 0.5rem;
 }
 /* end properties styles */
 
@@ -476,9 +480,10 @@ header ul.is-sticky li a:active{
   color: #222;
   top: 50%;
   margin-top: -35px;
+  z-index: 1;
 }
 
-#testimonial-slider .slick-next{
+#testimonials-slider .slick-next{
   right: 0;
 }
 /* end testimonial styles */
